@@ -633,7 +633,8 @@ if __name__=='pymol.setting':
         mesh_grid_max                      = 595
         session_cache_optimize             = 596
         sdof_drag_scale                    = 597
-        scene_button_mode                  = 598
+        scene_buttons_mode                 = 598
+        scene_buttons                      = 599
         
     setting_sc = Shortcut(SettingIndex.__dict__.keys())
     
